; ModuleID = '/home/carl/AnghaBench/kphp-kdb/logs/extr_logs-data.c_token_val_to_str.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/logs/extr_logs-data.c_token_val_to_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@token_buff = common dso_local global i8* null, align 8
@v_cstring = common dso_local global i32 0, align 4
@v_double = common dso_local global i32 0, align 4
@v_int = common dso_local global i32 0, align 4
@v_long = common dso_local global i32 0, align 4
@v_string = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @token_val_to_str(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load i8*, i8** @token_buff, align 8
  store i8* %4, i8** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  switch i32 %7, label %8 [
  ]

8:                                                ; preds = %1
  %9 = call i32 @assert(i32 0)
  br label %10

10:                                               ; preds = %8
  %11 = load i8*, i8** @token_buff, align 8
  ret i8* %11
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
